--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dark-mode",
   "private": true,
-  "homepage": "https://github.com/if-void7/dark-mode",
+  "homepage": "https://if-void7.github.io/dark-mode",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
